[package]
name = "exabgp-watchdogs"
version = "0.1.0"
authors = ["Anthony Ruhier <anthony.ruhier@gmail.com>"]
edition = "2018"

[[bin]]
name = "http-watchdog"
path = "src/http.rs"

[[bin]]
name = "dns-watchdog"
path = "src/dns.rs"

[profile.release]
lto = true
opt-level = 3

[dependencies]
clap = "^2"
ctrlc = "^3.1"
reqwest = "0.9"
trust-dns-resolver = "^0.12"
trust-dns-proto = ""
